--- a/index.html
+++ b/index.html
@@ -4,22 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/header-footer.css">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400&family=Rubik:wght@300&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="img/logo.png" type="image/png">
     <title>ГО "ДІМ"</title>
 </head>
 <body>
-    <header>
+    <header id="header">
         <div>
-            <a href="index.html"><img src="img/header/logo-header.png" alt="Логотип ГО ДІМ"></a>
+            <a href="index.html"><img src="img/header/logo-header.png" class="logo-header" alt="Логотип ГО ДІМ"></a>
         </div>
-        <nav>
+        <nav class="nav-header">
             <a href="about.html" target="_blank">Про нас</a>
             <a href="news.html" target="_blank">Новини</a>
             <a href="#projects">Заходи</a>
             <a href="#gallery">Галерея</a>
             <a href="#footer">Контакти</a>
         </nav>
-        <div>
+        <div class="follow-header">
             <a href="https://www.facebook.com/NG0DIM" target="_blank"><img src="img/header/facebook.png" alt="Facebook"></a>
             <a href="https://www.facebook.com/NG0DIM" target="_blank"><img src="img/header/telegram.png" alt="Telegram"></a>
             <a href="https://www.instagram.com/ngo__dim/" target="_blank"><img src="img/header/instagram.png" alt="Instagram"></a>
@@ -107,7 +112,7 @@
                 </div>
             </div>
         </section>
-        <section class="projects">
+        <section class="projects" id="projects">
             <div>
                 <h2>Заходи</h2>
                 <h3>Ми пропонуємо заходи, які дійсно цікаві для ваших дітей</h3>
@@ -128,7 +133,7 @@
             </div>
             <a href="news.html">Детальніше</a>
         </section>
-        <section class="gallery">
+        <section class="gallery" id="gallery">
             <div>
                 <h2>Галерея</h2>
                 <h3>Ми створюємо атмосферу, де можна вчитися, пізнавати щось нове та розважатися</h3>
@@ -172,7 +177,7 @@
             </div>
         </section>
     </main>
-    <footer>
+    <footer id="footer">
         <div>
             <div>
                 <a href="https://www.facebook.com/NG0DIM" target="_blank"><img src="img/footer/facebook.png" alt="Facebook"></a>
@@ -186,15 +191,32 @@
                 </div>
                 <div>
                     <h3>Email</h3>
-                    <a href="email:info@ngodim.com">info@ngodim.com</a>
+                    <a href="mailto:info@ngodim.com">info@ngodim.com</a>
+                </div>
+                <div>
+                    <h3>Адреса</h3>
+                    <a href="https://goo.gl/maps/7nyLetH9xYF3QXfCA">вул. Сагайдачного, 2, Добротвір, Львівська область, 80411</a>
                 </div>
             </div>
         </div>
         <div>
-
+            <div>
+                <a href="index.html"><img src="img/footer/logo-footer.png" alt="Логотип ГО ДІМ"></a>
+                <h5>Ми - активна та ініціативна молодь Добротвірської громади. Беремо активну участь у розвитку дітей та молоді нашого містечка і отримувати від цього задоволення.</h5>
+            </div>
+            <nav>
+                <a href="#header">Головна</a>
+                <a href="about.html" target="_blank">Про нас</a>
+                <a href="news.html" target="_blank">Новини</a>
+                <a href="#projects">Заходи</a>
+                <a href="#gallery">Галерея</a>
+            </nav>
+            <div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2553.8570409897034!2d24.382309552014455!3d50.20120307934077!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47252f25e69b7af3%3A0x36e7832f3f0b0779!2z0JPRgNC-0LzQsNC00YHRjNC60LAg0L7RgNCz0LDQvdGW0LfQsNGG0ZbRjyAi0JTQvtCx0YDQvtGC0LLRltGA0YHRjNC60LAg0ZbQvdGW0YbRltCw0YLQuNCy0L3QsCDQvNC-0LvQvtC00Ywi!5e0!3m2!1suk!2sua!4v1637004961382!5m2!1suk!2sua" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>            </div>
         </div>
         <div>
-
+            <p>© Created by ГО "ДІМ"</p>
+            <p>All rights Reserved</p>
         </div>
     </footer>
 </body>
