--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="X-UA-Compatible">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,32 +9,41 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400&family=Rubik:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400&family=Rubik:wght@300;500&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="img/logo.png" type="image/png">
     <title>ГО "ДІМ"</title>
 </head>
+
 <body>
     <header id="header">
-        <div>
-            <a href="index.html"><img src="img/header/logo-header.png" class="logo-header" alt="Логотип ГО ДІМ"></a>
-        </div>
-        <nav class="nav-header">
-            <a href="about.html" target="_blank">Про нас</a>
-            <a href="news.html" target="_blank">Новини</a>
-            <a href="#projects">Заходи</a>
-            <a href="#gallery">Галерея</a>
-            <a href="#footer">Контакти</a>
-        </nav>
-        <div class="follow-header">
-            <a href="https://www.facebook.com/NG0DIM" target="_blank"><img src="img/header/facebook.png" alt="Facebook"></a>
-            <a href="https://www.facebook.com/NG0DIM" target="_blank"><img src="img/header/telegram.png" alt="Telegram"></a>
-            <a href="https://www.instagram.com/ngo__dim/" target="_blank"><img src="img/header/instagram.png" alt="Instagram"></a>
+        <div class="header-block container">
+            <div>
+                <a href="index.html"><img src="img/header/logo-header.png" class="logo-header" alt="Логотип ГО ДІМ"></a>
+            </div>
+            <nav class="nav-header">
+                <a href="about.html" target="_blank">Про нас</a>
+                <a href="news.html" target="_blank">Новини</a>
+                <a href="#projects">Заходи</a>
+                <a href="#gallery">Галерея</a>
+                <a href="#footer">Контакти</a>
+            </nav>
+            <div class="follow-header">
+                <a href="https://www.facebook.com/NG0DIM" target="_blank"><img src="img/header/facebook.png"
+                        alt="Facebook"></a>
+                <a href="https://www.facebook.com/NG0DIM" target="_blank"><img src="img/header/telegram.png"
+                        alt="Telegram"></a>
+                <a href="https://www.instagram.com/ngo__dim/" target="_blank"><img src="img/header/instagram.png"
+                        alt="Instagram"></a>
+            </div>
         </div>
     </header>
     <main>
         <section class="main-photo">
-            <h1>Добротвірська ініціативна молодь</h1>
-            <h3>Молодіжна громадська організація</h3>
+            <div class="main-photo-text">
+                <h1>Добротвірська ініціативна молодь</h1>
+                <hr>
+                <h3>Молодіжна громадська організація</h3>
+            </div>
         </section>
         <section class="about-us">
             <div>
@@ -75,8 +85,10 @@
         </section>
         <section class="camp">
             <h2>Дитячий табір</h2>
-            <p>Щорічно наша команда організовує проведення дитячих таборів. Усіма силами ми намагаємося залишити приємний спогад у дитячій пам’яті про літо.</p>
-            <p>Наші волонтери стають не просто наставниками для дітлахів, але і справжніми друзями. Ми намагаємося постійно змінювати концепцію табору, щоб дивувати вас знову і знову.</p>
+            <p>Щорічно наша команда організовує проведення дитячих таборів. Усіма силами ми намагаємося залишити
+                приємний спогад у дитячій пам’яті про літо.</p>
+            <p>Наші волонтери стають не просто наставниками для дітлахів, але і справжніми друзями. Ми намагаємося
+                постійно змінювати концепцію табору, щоб дивувати вас знову і знову.</p>
         </section>
         <section class="docudays">
             <div></div>
@@ -84,7 +96,9 @@
                 <div>
                     <h2>Кіноклуб Docudays UA</h2>
                     <h3>при Громадській організації "Добротвірська ініціативна молодь"</h3>
-                    <p>Ми створюємо можливості для кожної людини в Україні дивитися талановите та актуальне документальне кіно з усього світу про права людини. Формуємо активну громадянську позицію та повагу до людської гідності. Підтримуємо розвиток української кіноіндустрії.</p>
+                    <p>Ми створюємо можливості для кожної людини в Україні дивитися талановите та актуальне
+                        документальне кіно з усього світу про права людини. Формуємо активну громадянську позицію та
+                        повагу до людської гідності. Підтримуємо розвиток української кіноіндустрії.</p>
                 </div>
                 <div>
                     <h4>Основними етичними принципами діяльності вважаються:</h4>
@@ -146,16 +160,22 @@
             <h2>Документи</h2>
             <div>
                 <div>
-                    <a href="https://drive.google.com/file/d/1wNFZT2YpSGPAW2F1frRjTJvM3WyqVrhb/view?usp=sharing" target="_blank"><img src="img/index/documents/pdf.png" alt=""></a>
-                    <a href="https://drive.google.com/file/d/1wNFZT2YpSGPAW2F1frRjTJvM3WyqVrhb/view?usp=sharing" target="_blank">Статут ГО "ДІМ"</a>
+                    <a href="https://drive.google.com/file/d/1wNFZT2YpSGPAW2F1frRjTJvM3WyqVrhb/view?usp=sharing"
+                        target="_blank"><img src="img/index/documents/pdf.png" alt=""></a>
+                    <a href="https://drive.google.com/file/d/1wNFZT2YpSGPAW2F1frRjTJvM3WyqVrhb/view?usp=sharing"
+                        target="_blank">Статут ГО "ДІМ"</a>
                 </div>
                 <div>
-                    <a href="https://drive.google.com/file/d/1I4eKzn3JbQ82_nxK-smeEiNMt4TIWJZf/view?usp=sharing" target="_blank"><img src="img/index/documents/pdf.png" alt=""></a>
-                    <a href="https://drive.google.com/file/d/1I4eKzn3JbQ82_nxK-smeEiNMt4TIWJZf/view?usp=sharing" target="_blank">Протокол засновників ГО "ДІМ"</a>
+                    <a href="https://drive.google.com/file/d/1I4eKzn3JbQ82_nxK-smeEiNMt4TIWJZf/view?usp=sharing"
+                        target="_blank"><img src="img/index/documents/pdf.png" alt=""></a>
+                    <a href="https://drive.google.com/file/d/1I4eKzn3JbQ82_nxK-smeEiNMt4TIWJZf/view?usp=sharing"
+                        target="_blank">Протокол засновників ГО "ДІМ"</a>
                 </div>
                 <div>
-                    <a href="https://drive.google.com/file/d/1rHv85js32ul8umla_hu1q3SdNIqpqnli/view?usp=sharing" target="_blank"><img src="img/index/documents/pdf.png" alt=""></a>
-                    <a href="https://drive.google.com/file/d/1rHv85js32ul8umla_hu1q3SdNIqpqnli/view?usp=sharing" target="_blank">Виписка з ЄДР</a>
+                    <a href="https://drive.google.com/file/d/1rHv85js32ul8umla_hu1q3SdNIqpqnli/view?usp=sharing"
+                        target="_blank"><img src="img/index/documents/pdf.png" alt=""></a>
+                    <a href="https://drive.google.com/file/d/1rHv85js32ul8umla_hu1q3SdNIqpqnli/view?usp=sharing"
+                        target="_blank">Виписка з ЄДР</a>
                 </div>
             </div>
         </section>
@@ -180,9 +200,12 @@
     <footer id="footer">
         <div>
             <div>
-                <a href="https://www.facebook.com/NG0DIM" target="_blank"><img src="img/footer/facebook.png" alt="Facebook"></a>
-                <a href="https://www.facebook.com/NG0DIM" target="_blank"><img src="img/footer/telegram.png" alt="Telegram"></a>
-                <a href="https://www.instagram.com/ngo__dim/" target="_blank"><img src="img/footer/instagram.png" alt="Instagram"></a>    
+                <a href="https://www.facebook.com/NG0DIM" target="_blank"><img src="img/footer/facebook.png"
+                        alt="Facebook"></a>
+                <a href="https://www.facebook.com/NG0DIM" target="_blank"><img src="img/footer/telegram.png"
+                        alt="Telegram"></a>
+                <a href="https://www.instagram.com/ngo__dim/" target="_blank"><img src="img/footer/instagram.png"
+                        alt="Instagram"></a>
             </div>
             <div>
                 <div>
@@ -195,14 +218,16 @@
                 </div>
                 <div>
                     <h3>Адреса</h3>
-                    <a href="https://goo.gl/maps/7nyLetH9xYF3QXfCA">вул. Сагайдачного, 2, Добротвір, Львівська область, 80411</a>
+                    <a href="https://goo.gl/maps/7nyLetH9xYF3QXfCA">вул. Сагайдачного, 2, Добротвір, Львівська область,
+                        80411</a>
                 </div>
             </div>
         </div>
         <div>
             <div>
                 <a href="index.html"><img src="img/footer/logo-footer.png" alt="Логотип ГО ДІМ"></a>
-                <h5>Ми - активна та ініціативна молодь Добротвірської громади. Беремо активну участь у розвитку дітей та молоді нашого містечка і отримувати від цього задоволення.</h5>
+                <h5>Ми - активна та ініціативна молодь Добротвірської громади. Беремо активну участь у розвитку дітей та
+                    молоді нашого містечка і отримувати від цього задоволення.</h5>
             </div>
             <nav>
                 <a href="#header">Головна</a>
@@ -212,7 +237,10 @@
                 <a href="#gallery">Галерея</a>
             </nav>
             <div>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2553.8570409897034!2d24.382309552014455!3d50.20120307934077!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47252f25e69b7af3%3A0x36e7832f3f0b0779!2z0JPRgNC-0LzQsNC00YHRjNC60LAg0L7RgNCz0LDQvdGW0LfQsNGG0ZbRjyAi0JTQvtCx0YDQvtGC0LLRltGA0YHRjNC60LAg0ZbQvdGW0YbRltCw0YLQuNCy0L3QsCDQvNC-0LvQvtC00Ywi!5e0!3m2!1suk!2sua!4v1637004961382!5m2!1suk!2sua" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>            </div>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2553.8570409897034!2d24.382309552014455!3d50.20120307934077!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47252f25e69b7af3%3A0x36e7832f3f0b0779!2z0JPRgNC-0LzQsNC00YHRjNC60LAg0L7RgNCz0LDQvdGW0LfQsNGG0ZbRjyAi0JTQvtCx0YDQvtGC0LLRltGA0YHRjNC60LAg0ZbQvdGW0YbRltCw0YLQuNCy0L3QsCDQvNC-0LvQvtC00Ywi!5e0!3m2!1suk!2sua!4v1637004961382!5m2!1suk!2sua"
+                    width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
         </div>
         <div>
             <p>© Created by ГО "ДІМ"</p>
@@ -220,4 +248,5 @@
         </div>
     </footer>
 </body>
+
 </html>
