--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </header>
     <main>
         <section class="main-photo">
-            <div class="main-photo-text">
+            <div class="main-photo-text container">
                 <h1>Добротвірська ініціативна молодь</h1>
                 <hr>
                 <h3>Молодіжна громадська організація</h3>
@@ -53,23 +53,23 @@
             </div>
             <div>
                 <div>
-                    <img src="img/index/about-us/icon-team.png" alt="Hand">
+                    <!-- <img src="img/index/about-us/icon-team.png" alt="Hand"> -->
                     <h3>Об'єднуємо</h3>
                     <p>Місцеву молодь задля розвитку громади</p>
                 </div>
                 <div>
-                    <img src="img/index/about-us/icon-experience.png" alt="Hand">
+                    <!-- <img src="img/index/about-us/icon-experience.png" alt="Hand"> -->
                     <h3>Волонтеримо</h3>
                     <p>Наша діяльність спрямована на залучення молоді до реалізації проектів</p>
                 </div>
                 <div>
-                    <img src="img/index/about-us/icon-idea.png" alt="Hand">
+                    <!-- <img src="img/index/about-us/icon-idea.png" alt="Hand"> -->
                     <h3>Створюємо</h3>
                     <p>Табори для активного та духовного відпочинку дітей</p>
                 </div>
             </div>
         </section>
-        <section class="about-numbers">
+        <!-- <section class="about-numbers"> 
             <div>
                 <h2>5</h2>
                 <p>Років досвіду</p>
@@ -246,7 +246,7 @@
             <p>© Created by ГО "ДІМ"</p>
             <p>All rights Reserved</p>
         </div>
-    </footer>
+    </footer>-->
 </body>
 
 </html>
