add blocks, to the block docudays

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400&family=Rubik:wght@300;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400&family=Rubik:wght@300;500&display=swap"
+        rel="stylesheet">
     <link rel="shortcut icon" href="img/logo.png" type="image/png">
     <title>ГО "ДІМ"</title>
 </head>
@@ -42,57 +43,74 @@
             <div class="main-photo-text container">
                 <h1>Добротвірська ініціативна молодь</h1>
                 <hr>
-                <h3>Молодіжна громадська організація</h3>
+                <h2>Молодіжна громадська організація</h2>
             </div>
         </section>
         <section class="about-us">
-            <div>
+            <div class="about-us-text container">
                 <h2>Про нас</h2>
-                <h3>ДІМ - добротвірська ініціативна молодь, яка через спільну
+                <h3>ДІМ - добротвірська ініціативна молодь, яка через спільну <br>
                     працю, подорожі об'єднуємо молодь громади.</h3>
             </div>
-            <div>
-                <div>
-                    <!-- <img src="img/index/about-us/icon-team.png" alt="Hand"> -->
+            <div class="about-us-blocks container">
+                <div class="about-us-card">
+                    <img src="img/index/about-us/icon-team.png" alt="Hand">
                     <h3>Об'єднуємо</h3>
+                    <hr>
                     <p>Місцеву молодь задля розвитку громади</p>
                 </div>
-                <div>
-                    <!-- <img src="img/index/about-us/icon-experience.png" alt="Hand"> -->
+                <div class="about-us-card">
+                    <img src="img/index/about-us/icon-experience.png" alt="Volunteer">
                     <h3>Волонтеримо</h3>
+                    <hr>
                     <p>Наша діяльність спрямована на залучення молоді до реалізації проектів</p>
                 </div>
-                <div>
-                    <!-- <img src="img/index/about-us/icon-idea.png" alt="Hand"> -->
+                <div class="about-us-card">
+                    <img src="img/index/about-us/icon-idea.png" alt="Idea">
                     <h3>Створюємо</h3>
+                    <hr>
                     <p>Табори для активного та духовного відпочинку дітей</p>
                 </div>
             </div>
         </section>
-        <!-- <section class="about-numbers"> 
-            <div>
-                <h2>5</h2>
-                <p>Років досвіду</p>
-            </div>
-            <div>
-                <h2>12</h2>
-                <p>Досвідчених аніматорів</p>
-            </div>
-            <div>
-                <h2>400+</h2>
-                <p>Задоволених дітей</p>
+        <div class="about-numbers-header"></div>
+        <section class="about-numbers">
+            <div class="about-numbers-blocks container">
+                <div class="about-numbers-card">
+                    <h2>5</h2>
+                    <hr>
+                    <p>Років досвіду</p>
+                </div>
+                <div class="about-numbers-card">
+                    <h2>12</h2>
+                    <hr>
+                    <p>Досвідчених аніматорів</p>
+                </div>
+                <div class="about-numbers-card">
+                    <h2>450+</h2>
+                    <hr>
+                    <p>Задоволених дітей</p>
+                </div>
             </div>
         </section>
+        <div class="about-numbers-footer"></div>
         <section class="camp">
-            <h2>Дитячий табір</h2>
-            <p>Щорічно наша команда організовує проведення дитячих таборів. Усіма силами ми намагаємося залишити
-                приємний спогад у дитячій пам’яті про літо.</p>
-            <p>Наші волонтери стають не просто наставниками для дітлахів, але і справжніми друзями. Ми намагаємося
-                постійно змінювати концепцію табору, щоб дивувати вас знову і знову.</p>
+            <div class="camp-block container">
+                <div class="camp-card ">
+                    <h2>Дитячий табір</h2>
+                    <hr>
+                    <p>Щорічно наша команда організовує проведення дитячих таборів. Усіма силами ми намагаємося залишити
+                        приємний спогад у дитячій пам’яті про літо.</p>
+                    <p>Наші волонтери стають не просто наставниками для дітлахів, але і справжніми друзями. Ми
+                        намагаємося
+                        постійно змінювати концепцію табору, щоб дивувати вас знову і знову.</p>
+                </div>
+                <div></div>
+            </div>
         </section>
         <section class="docudays">
-            <div></div>
-            <div>
+            <div class="docudays-poster"></div>
+            <div class="docudays-info">
                 <div>
                     <h2>Кіноклуб Docudays UA</h2>
                     <h3>при Громадській організації "Добротвірська ініціативна молодь"</h3>
@@ -126,7 +144,7 @@
                 </div>
             </div>
         </section>
-        <section class="projects" id="projects">
+        <!-- <section class="projects" id="projects">
             <div>
                 <h2>Заходи</h2>
                 <h3>Ми пропонуємо заходи, які дійсно цікаві для ваших дітей</h3>
