--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="X-UA-Compatible">
+<html lang="uk">
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="uk" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/header-footer.css">
     <link rel="stylesheet" href="css/index.css">
@@ -33,8 +33,7 @@
             <div class="follow-header">
                 <a href="https://www.facebook.com/NG0DIM" target="_blank"><img src="img/header/facebook.png"
                         alt="Facebook"></a>
-                <a href="https://www.facebook.com/NG0DIM" target="_blank"><img src="img/header/telegram.png"
-                        alt="Telegram"></a>
+                <a href="https://t.me/ngodim" target="_blank"><img src="img/header/telegram.png" alt="Telegram"></a>
                 <a href="https://www.instagram.com/ngo__dim/" target="_blank"><img src="img/header/instagram.png"
                         alt="Instagram"></a>
             </div>
@@ -273,13 +272,12 @@
     </main>
     <div class="footer-top"></div>
     <footer id="footer">
-        <div class="">
-            <div class="footer-follow-contact">
+        <div>
+            <div class="footer-follow-contact container">
                 <div class="footer-follow">
                     <a href="https://www.facebook.com/NG0DIM" target="_blank"><img src="img/footer/facebook.png"
                             alt="Facebook"></a>
-                    <a href="https://www.facebook.com/NG0DIM" target="_blank"><img src="img/footer/telegram.png"
-                            alt="Telegram"></a>
+                    <a href="https://t.me/ngodim" target="_blank"><img src="img/footer/telegram.png" alt="Telegram"></a>
                     <a href="https://www.instagram.com/ngo__dim/" target="_blank"><img src="img/footer/instagram.png"
                             alt="Instagram"></a>
                 </div>
@@ -290,23 +288,22 @@
                     </div>
                     <div class="footer-contact-card">
                         <h3>Email</h3>
-                        <a href="mailto:info@ngodim.com">info@ngodim.com</a>
+                        <a href="mailto:office@ngodim.com">office@ngodim.com</a>
                     </div>
                     <div class="footer-contact-card">
                         <h3>Адреса</h3>
                         <a href="https://goo.gl/maps/7nyLetH9xYF3QXfCA">вул. Сагайдачного, 2, Добротвір,<br> Львівська
-                            область,
-                            80411</a>
+                            область, 80411</a>
                     </div>
                 </div>
             </div>
-            <hr class="footer-line">
-            <div class="footer-logo-nav-map">
+            <hr class="footer-line container">
+            <div class="footer-logo-nav-map container">
                 <div class="footer-logo">
                     <a href="index.html"><img src="img/footer/logo-footer.png" alt="Логотип ГО ДІМ"></a>
                     <h5>Ми - активна та ініціативна молодь Добротвірської громади. Беремо активну участь у розвитку
                         дітей та
-                        молоді нашого містечка і отримувати від цього задоволення.</h5>
+                        молоді нашого містечка і отримуємо від цього задоволення.</h5>
                 </div>
                 <div class="footer-menu">
                     <h3>Меню</h3>
@@ -322,11 +319,11 @@
                 <div class="footer-map">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2553.8570409897034!2d24.382309552014455!3d50.20120307934077!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47252f25e69b7af3%3A0x36e7832f3f0b0779!2z0JPRgNC-0LzQsNC00YHRjNC60LAg0L7RgNCz0LDQvdGW0LfQsNGG0ZbRjyAi0JTQvtCx0YDQvtGC0LLRltGA0YHRjNC60LAg0ZbQvdGW0YbRltCw0YLQuNCy0L3QsCDQvNC-0LvQvtC00Ywi!5e0!3m2!1suk!2sua!4v1637004961382!5m2!1suk!2sua"
-                        width="100%" height="258" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                         style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
             </div>
-            <hr class="footer-line">
-            <div class="created-by">
+            <hr class="footer-line container">
+            <div class="created-by container">
                 <p>© Created by ГО "ДІМ"</p>
                 <p>All rights Reserved</p>
             </div>
